# Shittem-Server

./: .gitignore  DECRYPTION_ANALYSIS.md  Official_response.json  PROJECT_SUMMARY.md  README.md  README_DECODER.md  TestGateway.cs  ba_gui.py  blue_archive_server.py  blue_archive_server_proxy.py  nexon_summary.json  report.md  request_logger.py  server_config_official_response.txt  server_log_1755729172.har  start_servers.py  test-data.json  test-gateway.ps1  test_gateway_request.txt
BlueArchiveAPI/: .gitignore  BlueArchiveAPI.sln
BlueArchiveAPI/BlueArchiveAPI/: BlueArchiveAPI.csproj  CONFIG.md  Program.cs  Utils.cs  appsettings.Development.json  appsettings.json
BlueArchiveAPI/BlueArchiveAPI/Admin/: AdminContracts.cs  AdminMailContractc.cs  AdminModule.cs  AdminStore.cs  FileAdminStore.cs  IAdminStore.cs  InMemoryAdminStore.cs
BlueArchiveAPI/BlueArchiveAPI/Catalog/: Entity.cs  EntityCatalog.cs  EntityDto.cs  EntityType.cs  IEntityCatalog.cs
BlueArchiveAPI/ProtocolGen/: Program.cs  ProtocolGen.csproj
ClientHook/: CHANGELOG.md  CMakeLists.txt  README.md  TESTING_GUIDE.md  build.ps1  inject.bat  inject.ps1  inject_v2.ps1
ClientHook/src/: Hook.cpp  Injector.cpp  NetworkDiagnostic.cpp
GameGateway/: GameGateway.sln
lib/: enhanced_transparent_redirect_win.py  test.py  transparent_redirect_win.py
logs/: mitm_20250826.jsonl
mitm/: .gitignore  README.md  blue_archive_addon.py  launch_mitm.py  verify_flip.py
tools/: build_catalog.py  nxinface.enconfig.json
tools/ba-bypass/: ba_bypass_src.js  ba_no_crypto_no_deflate.js  package-lock.json  package.json
(+71 files in other folders)
